--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@import './assets/styles/variables.less';
+
+* {
+  box-sizing:border-box;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  border: none;
+  outline: none;
+}
+body {
+  background: @Scream-2-hex;
+  color: @Scream-4-hex;
+  font-size: 18px;
+}
+button {
+  cursor: pointer;
+  font-size: 18px;
+  &:disabled {
+    opacity: .5;
+    pointer-events: none;
+  }
+}
